# bn-bgan-impl

./: .gitignore  README.md  pyproject.toml  requirements.txt  statistical_summary.tex
bgan/: __init__.py  data.py  data_sampler.py  data_transformer.py  decorators.py  demo.py  errors.py
bgan/synthesizers/: __init__.py  base.py  bgan.py  tvae.py
bgan/utility/: bgan_imp.py  bgan_sdg.py
bn_bgan/: bn_bgan_imp.py  bn_bgan_sdg.py
new_datasets/: baseline_heart_disease_dataset  mixed_data_hepatisis_dataset
outputs/imputation_data/: calibration_results.csv  results_impact_summary.csv  results_quality_summary.csv  test_uncertainty_per_cell_stds.csv  uncertainty_per_cell_stds.csv
outputs/loss_ablation_data/: loss_ablation_results.csv  loss_ablation_results.tex
outputs/synthetic_data_comparison/: comparison_results.csv
tests/: imputation_calibration_experiment.py  loss_ablation_study.py  main.py  synthetic_data_comparison.py  uncertainty_analysis.py
tests/imputation_tests/: configurations.py  evaluation_metrics.py  imputation_evaluator.py  main.py  uncertainty_plots.py  visualization_results.py
tests/sdg_tests/: main.py  sdg_visualizer.py  uncertainty_bn_test.py
